[package]
name = "monoterm"
version = "0.1.10-dev"
edition = "2021"
rust-version = "1.74"
description = "Convert terminal colors to monochrome"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/monoterm"
license = "GPL-3.0-or-later"
keywords = ["terminal", "monochrome", "color", "unix", "linux"]
categories = ["command-line-utilities"]

[dependencies]
filterm = "0.5.0"
